# matsolver

./: CMakeList.txt  CMakeLists.txt  Shape.cpp  Shape.h  main.cpp  mohrs-circle.cpp  mohrs-circle.h  stress-theory.cpp  stress-theory.h
